# toolkit_api

./: Cargo.toml  Dockerfile  Rocket.toml  dictionary_site_scrape_10_8692.txt  error.json  site_scrap.rs  verb_pair.txt
data/: verb_tree.txt
saved_code/: transfer_file_to_db.rs  transfer_full_data_to_db.rs
src/: main.rs
src/basic_conversions/: url_encode.rs
src/pages/: index.rs
src/routes/: mod.rs
src/routes/ai/: clear_cache.rs  list_to_list.rs  mod.rs  remove_from_cache.rs  str_to_str.rs
src/routes/ai/client/: .gitignore  bill.json  cache.json
src/routes/basic_conversions/: mod.rs  url_decode.rs  wages.rs
src/routes/data_cleaning/: ai_format_fix.rs  mod.rs  wordify.rs
src/routes/email/: mod.rs  validate_email.rs
src/routes/pages/: home.rs
src/routes/rubit/: mod.rs
src/routes/rubit/generate_sentence/: generate_russian_example.rs
src/routes/rubit/generate_vocab_list/: raw_vocabulary.rs
src/routes/rubit/models/: russian_words.rs
src/routes/rubit/self_updates/: add_form_lemma.rs
src/routes/rubit/utils/: input_cleaning.rs  input_parsing.rs  insert_unrecognized.rs  stop_words.rs  stop_words.txt
src/routes/russian/: add_form_lemma.rs  exchange_models.rs  generate_sentence.rs  generate_vocab_list.rs  mod.rs  word_in_db.rs
src/routes/russian/generate_sentence/: generate_russian_example.rs
src/routes/russian/generate_vocab_list/: raw_vocabulary.rs  verb_pairs.rs  verb_trees.rs
src/routes/russian/models/: mod.rs  prelude.rs  russian_words.rs  unrecognized_words.rs
src/routes/russian/utils/: in_checks.rs  input_cleaning.rs  input_parsing.rs  mod.rs  stop_words.rs
src/security/: auth.rs  mod.rs
src/templates/: home.html.tera  index.html
src/utils/: cors.rs
