[package]
name = "toolkit_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"]}
chrono = "0.4.24"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"

