[package]
name = "toolkit_api"
version = "0.1.0"
edition = "2021"

# sea-orm-cli generate entity -o src/entity -t words --with-serde both

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json", "secrets"]}
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
chrono = "0.4.26"

serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
sea-orm = { version = "0.12.0-rc.2", features = [ "sqlx-mysql", "runtime-tokio-rustls", "macros" ] }
sea-query = "0.28.5"
urlencoding = "2.1.2"
dotenvy = "0.15.7"

# Email validation
check-if-email-exists = "0.9.0"

