[package]
name = "toolkit_api"
version = "0.1.0"
edition = "2021"

# sea-orm-cli generate entity -o src/entity -t words --with-serde both

[dependencies]
rocket = { version = "0.5.0", features = ["json"]} # "secrets"
rocket_cors = "0.6.0"
chrono = "0.4.26"

serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
sea-orm = { version = "0.12.0-rc.2", features = [ "sqlx-mysql", "runtime-tokio-rustls", "macros" ] }
sea-query = "0.28.5"
urlencoding = "2.1.2"
dotenvy = "0.15.7"

# OpenAI API
openai-api-rs = "3.0.1"
openai_rs = {git = "https://github.com/Noah3141/openai_rs", branch = "main"}

# Web Scraping
# error-chain = "0.12.4"
# select = "0.6.0"
reqwest = "0.11.18"

# Email validation
# check-if-email-exists = "0.9.0"

